--- a/wp-content/themes/cordova/assets/less/layouts/_general.less
+++ b/wp-content/themes/cordova/assets/less/layouts/_general.less
@@ -50,3 +50,7 @@ body {
 a {
   color: #5e5e5e;
 }
+
+.result {
+  width: 100%;
+}
