--- a/wp-content/themes/cordova/assets/less/layouts/_posts.less
+++ b/wp-content/themes/cordova/assets/less/layouts/_posts.less
@@ -4,11 +4,14 @@
 .hentry .entry-content { }
 .hentry footer { }
 
-.lead-image-container,
-.lead-image-container2 {
+.lead-image-container {
     display:inline-block;
     position: relative;
 }
+.lead-image-container2 {
+  position: relative;
+}
+
 .lead-image-container:after,
 .lead-image-container2:after {
     content:'';
